--- a/basics/EPISODE-01/1index.html
+++ b/basics/EPISODE-01/1index.html
@@ -16,7 +16,7 @@
     const root=document.getElementById("root");
     root.appendChild(heading);
     const about=document.createElement("h6");
-    about.innerHTML="qwertyuioasdfghjklxcvbnm,qwertyuiopasdfghjklllllll lorem epsdfcgvbhnjdhsbttttttttttttttttttttttttt";
+    about.innerHTML="qweryuioasdfghjk";
     const main=document.getElementById("main");
     main.appendChild(about);
     const submain=document.createElement("div");
